# watcher

./: .gitignore  Cargo.toml  Readme.md  watch.yaml
.github/workflows/: pandoc.yml
doc/: doc.md  watch.txt
parser/: parser.rs
src/: lib.rs  main.rs
src/cli/: cli.rs  mod.rs
src/cli/lib/: terminal.rs
src/watchlib/: watch.rs
watchlib/: watch.rs
